--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>DW1A3</h1>
     <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A2">Atividade 2</a>
     <br/>
+    <br/>
     <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A3">Atividade 3</a>
+    <br/>
+    <br/>
+    <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A4">Atividade 4</a>
 </body>
 </html>
