--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <br/>
     <br/>
     <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A5">Atividade 5</a>
+    <br/>
+    <br/>
+    <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A6">Atividade 6</a>
 
 </body>
 </html>
