--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A5">Atividade 5</a>
     <br/>
     <br/>
-    <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A6">Atividade 6</a>
+    <a href="Atividades/A6/index.html">Atividade 6</a>
 
 </body>
 </html>
