--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A2">Atividade 2</a>
     <br/>
     <br/>
-    <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A3">Atividade 3</a>
+    <a href="Atividades/A3/index.html">Atividade 3</a>
     <br/>
     <br/>
-    <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A4">Atividade 4</a>
+    <a href="Atividades/A4/index.html">Atividade 4</a>
     <br/>
     <br/>
-    <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A5">Atividade 5</a>
+    <a href="Atividades/A5/index.html">Atividade 5</a>
     <br/>
     <br/>
     <a href="Atividades/A6/index.html">Atividade 6</a>
