--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <br/>
     <br/>
     <a href="Atividades/A6/index.html">Atividade 6</a>
+    <br/>
+    <br/>
+    <a href="Atividades/A7/index.html">Atividade 7</a>
 
 </body>
 </html>
