--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
     <a href="https://github.com/isadoravieira/DW1A3/tree/main/Atividades/A2">Atividade 2</a>
     <br/>
     <br/>
-    <a href="./A3/index.html">Atividade 3</a>
+    <a href="./Atividades/A3/index.html">Atividade 3</a>
     <br/>
     <br/>
-    <a href="./A4/index.html">Atividade 4</a>
+    <a href="./Atividades/A4/index.html">Atividade 4</a>
     <br/>
     <br/>
-    <a href="./A5/index.html">Atividade 5</a>
+    <a href="./Atividades/A5/index.html">Atividade 5</a>
     <br/>
     <br/>
-    <a href="./A6/index.html">Atividade 6</a>
+    <a href="./Atividades/A6/index.html">Atividade 6</a>
     <br/>
     <br/>
-    <a href="./A7/index.html">Atividade 7</a>
+    <a href="./Atividades/A7/index.html">Atividade 7</a>
+    <br/>
+    <br/>
+    <a href="./Atividades/A8/index.html">Atividade 8</a>
 
 </body>
 </html>
