--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <br/>
     <br/>
     <a href="./Trabalho/index.html">Trabalho</a>
+    <br/>
+    <br/>
+    <a href="./Projeto/index.html">Trabalho</a>
 
 </body>
 </html>
