--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <a href="./Trabalho/index.html">Trabalho</a>
     <br/>
     <br/>
-    <a href="./Projeto/index.html">Trabalho</a>
+    <a href="./Projeto/index.html">Projeto</a>
 
 </body>
 </html>
